[package]
name = "tap-consooomer"
version = "0.1.0"
authors = ["Andreas Baulig <free.geronimo@hotmail.de>"]
edition = "2018"
rust-version = "1.64.0"
description = "Parse Test Anything Protocol (TAP) files"
repository = "https://github.com/ChiefGokhlayeh/tap-consooomer"
license = "Apache-2.0"
keywords = ["consumer", "parser", "tap", "test-anything"]
categories = [
    "command-line-utilities",
    "development-tools::testing",
    "development-tools",
    "parsing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.1", features = ["derive"] }
pest = "2.7.2"
pest_derive = "2.7.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"

[lib]
name = "tapconsooomer"
path = "src/lib.rs"

[[bin]]
name = "tap"
path = "src/main.rs"
