[package]
name = "tap-consooomer"
version = "0.1.0"
authors = ["Andreas Baulig <free.geronimo@hotmail.de>"]
edition = "2018"
rust-version = "1.74.0"
description = "Parse Test Anything Protocol (TAP) files"
repository = "https://github.com/ChiefGokhlayeh/tap-consooomer"
license = "Apache-2.0"
keywords = ["consumer", "parser", "tap", "test-anything"]
categories = [
    "command-line-utilities",
    "development-tools::testing",
    "development-tools",
    "parsing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.19", features = ["derive"] }
pest = "2.7.13"
pest_derive = "2.7.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[lib]
name = "tapconsooomer"
path = "src/lib.rs"

[[bin]]
name = "tap"
path = "src/main.rs"
